--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 LOCAL_DATABASE="burgers_db"
 LOCAL_USERNAME="root"
-LOCAL_PASSWORD="Azazel0315"
+LOCAL_PASSWORD="Azazel0315"JAWSDB_URL='mysql://rgbzl2bv5f0piuda:mld5czpxda51g5pd@g9fej9rujq0yt0cd.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/axln20q5f0990ugz'
